[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/interface/item_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/items_icon/plant.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/store_container.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="StoreContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -804.0
margin_bottom = -540.0
rect_min_size = Vector2( 220, 60 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -25.0
margin_right = 222.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="HContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true

[node name="VBox" type="VBoxContainer" parent="HContainer"]
margin_left = 54.0
margin_right = 144.0
margin_bottom = 50.0

[node name="ItemName" type="Label" parent="HContainer/VBox"]
margin_right = 90.0
margin_bottom = 18.0
rect_min_size = Vector2( 90, 18 )
custom_fonts/font = SubResource( 1 )
text = "W. Vane"
valign = 1

[node name="ItemPrice" type="Label" parent="HContainer/VBox"]
margin_top = 22.0
margin_right = 90.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "1g"
valign = 1

[node name="ItemButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}
